# T3000-API

./: .env-example  .gitignore  Makefile  README.md  install.sh  package-lock.json  package.json  replace-config.js  swcrc.json  tsconfig.json
Cexample/: CMakeLists.txt  README.md
Cexample/app/: CMakeLists.txt  main.c
Cexample/helloworld_library/: CMakeLists.txt  helloworld.c  helloworld.h
bacnet-stack/: .gitignore
docs/: Authentication.md  Getting-started.md  GraphQL.md  Installing.md  README.md
docs/.vuepress/: config.ts
docs/directives/: deprecated.md  include.md  skip.md  specified-by.md
docs/enums/: auto-manual.md  building-protocol.md  building-scalar-field-enum.md  device-connection.md  device-scalar-field-enum.md  graphic-scalar-field-enum.md  holiday-scalar-field-enum.md  input-scalar-field-enum.md  output-scalar-field-enum.md  pid-scalar-field-enum.md  program-scalar-field-enum.md  project-scalar-field-enum.md  query-mode.md  schedule-scalar-field-enum.md  schedule-time-scalar-field-enum.md  sort-order.md  variable-scalar-field-enum.md
docs/examples/: 1-QueryProject.md  2-MutateProject.md
docs/inputs/: building-create-many-project-input-envelope.md  building-create-many-project-input.md  building-create-nested-many-without-project-input.md  building-create-nested-one-without-devices-input.md  building-filter-unique.md  (+278 more)
prisma/: schema.prisma
src/: context.ts  ctxFunctions.ts  files.ts  prisma.ts  schema.ts  server.ts
t3000-interpretor/: .gitignore  binding.gyp  index.js  package.json
temco-bacnetapi/: README.md  bacnet-discovery.c
(+133 files in other folders)
